--- a/public/assets/scss/elements/_portfolio.scss
+++ b/public/assets/scss/elements/_portfolio.scss
@@ -68,23 +68,47 @@
     }
 
     &.image-2 {
-      background-image: url(/assets/images/portfolio/wordpress-react-demo.png);
+      background-image: url(/assets/images/portfolio/react-wordpress.png);
     }
 
     &.image-3 {
-      background-image: url(/assets/images/portfolio/twilio-text-to-call.png);
+      background-image: url(/assets/images/portfolio/twilio-lambda-crop.png);
     }
 
     &.image-4 {
-      background-image: url(/assets/images/portfolio/python-long-exposure.png);
+      background-image: url(/assets/images/portfolio/long-exposure-crop.png);
     }
 
     &.image-5 {
-      background-image: url(/assets/images/portfolio/pixabay-image-finder.png);
+      background-image: url(/assets/images/portfolio/image-finder.png);
     }
 
     &.image-6 {
-      background-image: url(/assets/images/portfolio/corny-dad-jokes.png);
+      background-image: url(/assets/images/portfolio/corny-dad.png);
+    }
+
+    &.image-7 {
+      background-image: url(/assets/images/portfolio/hannashandiworks.png);
+    }
+
+    &.image-8 {
+      background-image: url(/assets/images/portfolio/superioradhesivesandtools.png);
+    }
+
+    &.image-9 {
+      background-image: url(/assets/images/portfolio/bbqproshop.png);
+    }
+
+    &.image-10 {
+      background-image: url(/assets/images/portfolio/richlinfabrics.png);
+    }
+
+    &.image-11 {
+      background-image: url(/assets/images/portfolio/qmpower.png);
+    }
+
+    &.image-12 {
+      background-image: url(/assets/images/portfolio/maturo.png);
     }
 
     &::after {
@@ -145,7 +169,9 @@
     right: 40px;
     max-width: 100% !important;
     z-index: 10;
-    padding: 0;
+    padding: 15px;
+    background: rgba(0, 0, 0, 0.85);
+    border-radius: 6px;
     @media #{$lg-layout} {
       left: 20px;
       right: 20px;
@@ -253,9 +279,10 @@
       left: 40px;
       max-width: 80% !important;
       z-index: 10;
-      padding: 0;
+      padding: 15px;
       right: 40px;
       margin: 0 auto;
+      background: rgba(0, 0, 0, 0.7);
       @media #{$lg-layout} {
         left: 20px;
         right: 20px;
